# Canny_Qt

./: README.md  Try_Canny_2.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
with_CMake/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
